src/recipe/parser/snapshots/rattler_build__recipe__parser__about__test__invalid_license.snap
---
source: src/recipe/parser/about.rs
expression: err
---
  × Failed to parse recipe

Error: 
  × an unspecified error occurred.
   ╭─[8:9]
 7 │             license: MIT/X derivate
 8 │         
   ╰────
  help: Parser error: invalid value
