src/recipe/parser/snapshots/rattler_build__recipe__parser__about__test__invalid_purls.snap
---
source: src/recipe/parser/about.rs
expression: err
---
  × Failed to parse recipe

Error: 
  × failed to parse purl: URL scheme must be pkg
   ╭─[8:19]
 7 │             purls:
 8 │                 - purl1
   ·                   ──┬──
   ·                     ╰── here
 9 │         
   ╰────
