src/recipe/parser/snapshots/rattler_build__recipe__parser__about__test__invalid_url.snap
---
source: src/recipe/parser/about.rs
expression: err
---
  × Failed to parse recipe

Error: 
  × an unspecified error occurred.
   ╭─[8:9]
 7 │             homepage: license_urla.asda:://sdskd
 8 │         
   ╰────
  help: Parser error: invalid value
